--- a/sandbox.html
+++ b/sandbox.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zxx">
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <link rel="stylesheet" type="text/css" href="yuh.css"/>
     <meta charset="utf-8">
     <title>Příklad - Základní HTML stránka</title>
     <style>
